--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,10 @@
 name: balcony-models
 
+channels:
+  - conda-forge
+
 dependencies:
-  - python=3.9
+  - python=3.7
   - numpy
   - pandas
   - matplotlib
